explicitly set z-index on app-content, fix overlap from navigation

--- a/core/css/apps.css
+++ b/core/css/apps.css
@@ -182,6 +182,7 @@
 	position: relative;
 	height: 100%;
 	overflow-y: auto;
+	z-index: 100;
 }
 
 
